# LoofCloud

./: .gitignore  LICENSE
backend/: .env.example  .gitignore  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  events.py  logger.py  p115.py  security.py
backend/app/db/: config.py  database.py  mongodb.py  redis.py  secret_key.py
backend/app/helpers/: response.py
backend/app/middleware/: logging.py
backend/app/models/: file.py  user.py
backend/app/schemas/: config.py  p115.py  token.py  user.py
backend/app/services/: user.py  user_service.py
backend/app/startup/: __init__.py  app.py  lifespan.py  server.py
backend/app/tasks/: jobs.py  runner.py  scheduler.py
backend/app/utils/: common.py  timezone.py
frontend/: .env.example  README.md  package-lock.json  package.json  tamagui.config.ts
frontend/app/: +html.tsx  +not-found.tsx  _layout.tsx  login.tsx  modal.tsx
frontend/app/(tabs)/: _layout.tsx  files.tsx  index.tsx  settings.tsx  users.tsx
frontend/components/: EditScreenInfo.tsx  PWAInstallPrompt.tsx
frontend/components/settings/: BaseConfigCard.tsx  FullSyncConfigCard.tsx  (+2 more)
frontend/constants/: DesignTokens.ts  Shadows.ts
frontend/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/hooks/: usePWA.ts
frontend/lib/: api.ts
frontend/loofcloud/: app.json  package-lock.json  tamagui.config.ts
strmsync_core/: .gitignore  Cargo.toml  README.md  pyproject.toml
strmsync_core/src/: config.rs  item.rs  lib.rs  process.rs  py_info.rs  py_processor.rs  py_result.rs  result.rs  utils.rs
(+24 files in other folders)
