[package]
name = "strmsync_core"
version = "0.1.0"
edition = "2021"
description = "Rust core for full sync STRM batch processing"

[lib]
name = "strmsync_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
